Unified: Hide notification counter in OOBE.

We should hide the notification counter in OOBE, because
UnifiedMessageCenterView is hidden in such cases, and it's confusing to
have the counter still visible.

TEST=manual
BUG=907817

Change-Id: Ic81ab346fd993ced9f0ef10220abbc170dde0bbd
Reviewed-on: https://chromium-review.googlesource.com/c/1362693
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#613883}
Former-commit-id: d9d05c40612fa2b2ffb6395891a8ff3866fdb926